--- a/index.html
+++ b/index.html
@@ -85,10 +85,18 @@
                         <h4 class="title-eggshell">WHAT KIND OF TALKS?</h4>
                         <p>Topics vary from the technical (“Wordpress Child Themes”) to the inspiring (“Running: Not Just for the Zombie Apocalypse”). From practiced talks (“Designing for People”) to open discussions (“Nerds w/ Kids Roundtable”). Also, if you don't like the talk you're in, use the “rule of two feet” to get up and go to a different talk.</p>
                         </div>
-                        
-                        </div>
+                    </div>
                 </section>
+                <section id="location">
+                    <div class="bcp-location">
 
+                    </div>
+                </section>
+                <section id="register">
+                    <div class="registration-btn2">
+                        <p>Register for BarCamp 14</p>
+                    </div>
+                </section>
                 <section id="schedule">
                     <div class="container">
                         <div class="row--primary">
