--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </section>
                 <section id="location">
                     <div class="bcp-location">
-                      <section class="section"><!-- THE MAP -->
+                      <section class="section map"><!-- THE MAP -->
                         A MAP
                       </section>
                   
