cleaning up styles

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <main>
                 <section id="bcp-hero">
                     <div class="bcp14-hero">
-                        <div class="registration-btn">
+                        <div class="btn--register">
                             <p>Register for BarCamp 14</p>
                         </div>
                     </div>
                 </section>
                 <section id="join">
                     <div class="join-barCamp">
-                        <h1 class="title-mint">BarCamp 14</h1>
-                        <h2 class="subtitle-mint">NOVEMBER 18TH</h2>
+                        <h1 class="section__title">BarCamp 14</h1>
+                        <h2 class="section__subtitle">NOVEMBER 18TH</h2>
                         <p class="p-text-noodle join-text">We're back baby! Join us for the fourteenth year of BarCamp Philly for even more knowledge-sharing, community-building, and connection-making than ever before. Share your thoughts, questions, and experiences with your fellow BarCampers.</p>
-                        <div class="btn-mint">
+                        <div class="btn">
                             <p>Share</p>
                         </div>
                     </div>
@@ -61,19 +61,19 @@
                 <section id="about">
                     <div class="about-barCamp">
                         <div class="bcp-synopsis">
-                        <h1 class="title-eggshell">WHAT IS A BARCAMP?</h1>
+                        <h1 class="section__title--inverted">WHAT IS A BARCAMP?</h1>
                         <h4 id="synopsis">BarCamp is an “unconference“ – a full day of up to 66 sessions, over 6 timeslots, in 11 rooms at Wharton's Huntsman Hall where attendees build the schedule the morning of the event. Sessions are given on a variety of topics, and the day is created collaboratively – built by the people, for the people.</h4>
                         </div>
                         <div class="how-it-works">
-                        <h2 class="title-eggshell">HOW DOES IT WORK?</h2>
+                        <h2 class="section__title--inverted">HOW DOES IT WORK?</h2>
                         <p> At 10, we'll kick off the day with opening remarks, send everyone on their way to the first session, and the board-building can resume, with new talks being added throughout the morning. You can come check out the board anytime, or access our digital schedule on any device to see the latest and greatest talk times and rooms.</p>
                         </div>
                         <div class="give-a-talk">
-                        <h2 class="title-eggshell">CAN I GIVE A TALK?</h2>
+                        <h2 class="section__title--inverted">CAN I GIVE A TALK?</h2>
                         <p>Of course! We encourage anyone interested in giving a talk to post their topic on the board. But giving a talk – whether it's your first year or your tenth – is not required. Most people are there to listen, learn and discuss in sessions and don't necessarily lead a session.</p>
                         </div>
                         <div class="talk-types">
-                        <h4 class="title-eggshell">WHAT KIND OF TALKS?</h4>
+                        <h4 class="section__title--inverted">WHAT KIND OF TALKS?</h4>
                         <p>Topics vary from the technical (“Wordpress Child Themes”) to the inspiring (“Running: Not Just for the Zombie Apocalypse”). From practiced talks (“Designing for People”) to open discussions (“Nerds w/ Kids Roundtable”). Also, if you don't like the talk you're in, use the “rule of two feet” to get up and go to a different talk.</p>
                         </div>
                     </div>
@@ -112,14 +112,14 @@
                     </div>
                 </section>
                 <section id="register">
-                    <div class="registration-btn2">
+                    <div class="btn--register">
                         <p>Register for BarCamp 14</p>
                     </div>
                 </section>
 
                 <aside>
                   <div class="logo">BarCamp <span class="logo__counter">14</div>
-                  <button class="button button--register">Register for BarCamp 14</button>
+                  <button class="btn button--register">Register for BarCamp 14</button>
                 </aside>
 
                 <section class="section section--inverted">
@@ -299,8 +299,8 @@
                     This perk is first come, first serve and limited, so get your name in now!
                   </p>
 
-                  <button class="button">Full Sponsor Options</button>
-                  <button class="button">Contact Us</span>
+                  <button class="btn">Full Sponsor Options</button>
+                  <button class="btn">Contact Us</span>
                 </section>
 
                 <section class="section section--inverted">
