button styles updated. cleaning up layout.

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 
     <body>
             <main>
-                <section id="bcp-hero">
-                    <div class="bcp14-hero">
+                <section class="section bcp14-hero">
+                    <div>
+                      <button class="btn--register">
+                        <p>Register for BarCamp 14</p>
+                      </button>
                     </div>
-                    <button class="btn--register">
-                            <p>Register for BarCamp 14</p>
-                    </button>
+                    
                 </section>
                 <section class="section" id="join">
                     <div class="join-barCamp">
@@ -114,8 +115,8 @@
                     </div>
                 </section>
 
-               <section class="section">
-                 <div id="register">
+               <section class="section register">
+                 <div>
                   <button class="btn--register">Register for BarCamp 14</button>
                  </div>
                 </section>
