organizer section formatted

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     These folks work together with our partners and sponsors to give you the best BarCamp experience possible.
                   </p>
 
-                  <ul>
+                  <ul class="organizer--section" id="organizers">
                     <li>
                       <img src="https://placehold.it/250x250" alt="Photo of Tim Allen" />
                       Tim Allen
