nearby food proximity image added in location

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
         </div>
       </section>
 
-      <section class="nearby">
-        (todo: nifty nearby half-circles visualization)
+      <section class="nearby section">
+        <img src="/images/barcampphilly-2023-lunch-options-1.svg" alt="Food proximity" />
       </section>
 
       <section class="section section--register" id="register">
