organizer handles & images updated sponsor tier svgs updated.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <p class="card-title">Jon M, Huntsman Hall</p>
             <p>3730 Walnut Street,<br />Philadelphia, PA 19104</p>
             <p>
-              <a class="anchor-inline" href="">Get Directions</a>
+              <a class="anchor-inline" href="https://goo.gl/maps/uwd1XsRXiUKeUEy96" target="_blank">Get Directions</a>
             </p>
           </div>
         </div>
@@ -176,7 +176,7 @@
               <img
                 alt=""
                 class="trifold-icon"
-                src="images/transportation.svg"
+                src="images/parking.svg"
               />
               <h3 class="heading-secondary">Parking</h3>
               <p class="text-body text-body--small">
@@ -192,7 +192,7 @@
               <img
                 alt=""
                 class="trifold-icon"
-                src="images/transportation.svg"
+                src="images/sandwich.svg"
               />
               <h3 class="heading-secondary">Sustenance</h3>
               <p class="text-body text-body--small">
@@ -456,7 +456,7 @@
               <img
                 alt=""
                 class="trifold-icon"
-                src="images/transportation.svg"
+                src="images/sponsor-luchador-1.svg"
               />
               <h3 class="heading-secondary">Luchador</h3>
               <p class="text-body text-body--small">
@@ -472,9 +472,9 @@
               <img
                 alt=""
                 class="trifold-icon"
-                src="images/transportation.svg"
+                src="images/sponsor-giant-1.svg"
               />
-              <h3 class="heading-secondary">Luchador</h3>
+              <h3 class="heading-secondary">Giant</h3>
               <p class="text-body text-body--small">
                 Start your day by getting your T-shirt and badge. Swing by the
                 breakfast table for some coffee and eats. Head to the board to
@@ -488,9 +488,9 @@
               <img
                 alt=""
                 class="trifold-icon"
-                src="images/transportation.svg"
+                src="images/sponsor-big.svg"
               />
-              <h3 class="heading-secondary">Luchador</h3>
+              <h3 class="heading-secondary">Big</h3>
               <p class="text-body text-body--small">
                 Start your day by getting your T-shirt and badge. Swing by the
                 breakfast table for some coffee and eats. Head to the board to
@@ -543,10 +543,10 @@
                 <div class="organizer-name">Tim Allen</div>
                 <a
                   class="organizer-social"
-                  href=""
+                  href="https://twitter.com/FlipperPA"
                   target="_blank"
                   rel="noopener nofollow"
-                  >@handle</a
+                  >@flipperpa</a
                 >
               </div>
             </li>
@@ -561,10 +561,10 @@
                 <div class="organizer-name">Josh Goldberg</div>
                 <a
                   class="organizer-social"
-                  href=""
+                  href="https://twitter.com/JoshuaKGoldberg"
                   target="_blank"
                   rel="noopener nofollow"
-                  >@handle</a
+                  >@JoshuaKGoldberg</a
                 >
               </div>
             </li>
@@ -582,7 +582,7 @@
                   href=""
                   target="_blank"
                   rel="noopener nofollow"
-                  >@handle</a
+                  >@kydkennedy</a
                 >
               </div>
             </li>
@@ -606,15 +606,15 @@
 
             <li class="organizer">
               <img
-                alt="Photo of Tim Allen"
+                alt="Photo of Jessica Victor"
                 class="organizer-photo"
-                src="https://placehold.it/250x250"
+                src="https://images.squarespace-cdn.com/content/v1/5a75eafe6957da992cae5ab7/1521323119571-EG0ITWO64382S1EKOY62/14-Jessica-Victor-Small.jpg?format=2500w"
               />
               <div class="organizer-details">
-                <div class="organizer-name">Tim Allen</div>
+                <div class="organizer-name">Jessica Victor</div>
                 <a
                   class="organizer-social"
-                  href=""
+                  href="https://www.jessicavictor.com/"
                   target="_blank"
                   rel="noopener nofollow"
                   >@handle</a
@@ -624,12 +624,12 @@
 
             <li class="organizer">
               <img
-                alt="Photo of Tim Allen"
+                alt="Photo of Harper Yatvin"
                 class="organizer-photo"
                 src="https://placehold.it/250x250"
               />
               <div class="organizer-details">
-                <div class="organizer-name">Tim Allen</div>
+                <div class="organizer-name">Harper Yatvin</div>
                 <a
                   class="organizer-social"
                   href=""
