styles added for navigation. navigation put together. need to add anchor links to sections of the page. additional styles needed for component to function like in Figma file

--- a/index.html
+++ b/index.html
@@ -49,14 +49,22 @@
   </head>
 
   <body>
-    <main>
-      <nav class="section section--hero">
+    <main class="section">
+      <nav class="menu">
+       <div id="menuItem"><a href="#menu-home"></a></div>
+       <div id="menuItem"><a href="#menu-about"></a></div>
+        <div id="menuItem"><a href="#menu-location"></a></div>
+        <div id="menuItem"><a href="#menu-schedule"></a></div>
+        <div id="menuItem"><a href="#menu-sponsors"></a></div>
+        <div id="menuItem"><a hrerf="#menu-organizers"></a></div>
+      </nav>
+      <section class="section section--hero" id="#menu-home">
         <div class="section-contents">
           <button class="button button--primary section--hero--button-primary">
             Register for BarCamp 14
           </button>
         </div>
-      </nav>
+      </section>
 
       <section class="section section--explainer" id="explainer">
         <div
