navigation links added with smooth scroll behavior

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
   <body>
     <main class="section">
       <nav class="menu">
-       <div id="menuItem"><a href="#menu-home"></a></div>
-       <div id="menuItem"><a href="#menu-about"></a></div>
-        <div id="menuItem"><a href="#menu-location"></a></div>
-        <div id="menuItem"><a href="#menu-schedule"></a></div>
-        <div id="menuItem"><a href="#menu-sponsors"></a></div>
-        <div id="menuItem"><a hrerf="#menu-organizers"></a></div>
+       <a href="#home"><div id="menuItem"></div></a>
+       <a href="#about"><div id="menuItem"></div></a>
+       <a href="#location"><div id="menuItem"></div></a>
+       <a href="#schedule"><div id="menuItem"></div></a>
+       <a href="#sponsors"><div id="menuItem"></div></a>
+       <a href="#organizers"><div id="menuItem"></div></a>
       </nav>
-      <section class="section section--hero" id="#menu-home">
+      <section class="section section--hero" id="home">
         <div class="section-contents">
           <button class="button button--primary section--hero--button-primary">
             Register for BarCamp 14
