lunch/food graphic updated font for content updated to inter.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
       </section>
 
       <section class="nearby section">
-        <img src="/images/barcampphilly-2023-lunch-options-1.svg" alt="Food proximity" />
+        <div>
+          <img src="/images/barcampphilly-2023-lunch-options-2.svg" alt="Food proximity" />
+        </div>
       </section>
 
       <section class="section section--register" id="register">
