Add Wharton and tweak styles for sponsor section.

--- a/index.html
+++ b/index.html
@@ -375,25 +375,35 @@
           <h2 class="heading-primary">Sponsors</h2>
 
           <p class="text-body">
-            The companies below make BarCamp Philly 12 happen. We can’t thank
+            The organizations below make BarCamp Philly 14 happen. We can’t thank
             them enough. Be sure to show them some love if you see them around.
           </p>
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Venue Sponsor</h3>
-          <!-- Wharton -->
+          <a href="https://www.wharton.upenn.edu/" target="_blank">
+            <img src="images/sponsors/wharton-100.png" height="100" border="0" alt="The Wharton School">
+          </a>
         </div>
 
         <div class="sponsor-group">
-          <h3 class="heading-secondary sponsor-group-title">Ticket Sponsor</h3>
-          <!-- Ticketleap -->
+          <h3 class="heading-secondary sponsor-group-title">Ticket Sponsors</h3>
+          <a href="https:///" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="The Wharton School">
+          </a>
+          <a href="https:///" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="The Wharton School">
+          </a>
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
             After party title Sponsor
           </h3>
+          <a href="https:///" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="The Wharton School">
+          </a>
           <!-- Capital One -->
         </div>
 
