updated the nav. added a js file. please check EventListener

--- a/index.html
+++ b/index.html
@@ -46,17 +46,19 @@
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/components.css" />
     <link rel="stylesheet" href="styles/index.css" />
+    <!--js interactive-->
+    <link rel="javascript" href="js/index.js" />
   </head>
 
   <body>
     <main class="section">
       <nav class="menu">
-       <a href="#home"><div id="menuItem"></div></a>
-       <a href="#about"><div id="menuItem"></div></a>
-       <a href="#location"><div id="menuItem"></div></a>
-       <a href="#schedule"><div id="menuItem"></div></a>
-       <a href="#sponsors"><div id="menuItem"></div></a>
-       <a href="#organizers"><div id="menuItem"></div></a>
+       <a href="#home"><button class="menuItem active"></button></a>
+       <a href="#about"><button class="menuItem"></button></a>
+       <a href="#location"><button class="menuItem"></button></a>
+       <a href="#schedule"><button class="menuItem"></button></a>
+       <a href="#sponsors"><button class="menuItem"></button></a>
+       <a href="#organizers"><button class="menuItem"></button></a>
       </nav>
       <section class="section section--hero" id="home">
         <div class="section-contents">
