First wave of sponsors.

--- a/index.html
+++ b/index.html
@@ -389,71 +389,79 @@
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Ticket Sponsors</h3>
-          <a href="https:///" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="The Wharton School">
+          <a href="https://www.netapp.com/" target="_blank">
+            <img src="images/sponsors/netapp-100.png" height="100" border="0" alt="NetApp">
           </a>
-          <a href="https:///" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="The Wharton School">
+          <a href="https://www.cdillc.com/" target="_blank">
+            <img src="images/sponsors/cdi-100.png" height="100" border="0" alt="CDI">
           </a>
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
-            After party title Sponsor
+            Sugar Rush **AND** Lanyard Sponsor
           </h3>
-          <a href="https:///" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="The Wharton School">
+          <a href="https://www.sealworks.com" target="_blank">
+            <img src="images/sponsors/sealworks-100.png" height="100" border="0" alt="SealWorks">
           </a>
-          <!-- Capital One -->
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
-            Breakfast Sponsor
+            Caffeine Sponsor!
           </h3>
-          <!-- Tamman -->
+          <a href="https://www.salesforce.com" target="_blank">
+            <img src="images/sponsors/salesforce-100.png" height="100" border="0" alt="Salesforce">
+          </a>
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
-            "Bring On The Bacon" Sponsor
+            Media &amp; Ticket Sponsor
           </h3>
-          <!-- Alley -->
-        </div>
-
-        <div class="sponsor-group">
-          <h3 class="heading-secondary sponsor-group-title">
-            Caffeine Sponsor
-          </h3>
-          <!-- Promptworks -->
-        </div>
-
-        <div class="sponsor-group">
-          <h3 class="heading-secondary sponsor-group-title">
-            Sugar Rush Sponsor
-          </h3>
-          <!-- HighAvailability -->
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Sticker Sponsor</h3>
-          <!-- Sticker Giant -->
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
-            Luchador Sponsor
+            Luchador Sponsors
           </h3>
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
+          <a href="" target="_blank">
+            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          </a>
+        </div>
+
+        <div class="sponsor-group">
+          <h3 class="heading-secondary sponsor-group-title">Giant Sponsors</h3>
           <!-- list -->
         </div>
 
         <div class="sponsor-group">
-          <h3 class="heading-secondary sponsor-group-title">Giant Sponsor</h3>
-          <!-- list -->
-        </div>
-
-        <div class="sponsor-group">
-          <h3 class="heading-secondary sponsor-group-title">Big Sponsor</h3>
+          <h3 class="heading-secondary sponsor-group-title">Big Sponsors</h3>
           <!-- list -->
         </div>
       </section>
