--- a/index.html
+++ b/index.html
@@ -419,17 +419,17 @@
           <h3 class="heading-secondary sponsor-group-title">
             Media &amp; Ticket Sponsor
           </h3>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          <a href="https://technical.ly" target="_blank">
+            <img src="images/sponsors/technically-100.png" height="100" border="0" alt="Technical.ly">
           </a>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          <a href="https://www.ticketleap.com" target="_blank">
+            <img src="images/sponsors/ticketleap-100.png" height="100" border="0" alt="TicketLeap">
           </a>
         </div>
 
-        <div class="sponsor-group">
+        <!-- div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Sticker Sponsor</h3>
-        </div>
+        </div -->
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
@@ -438,31 +438,31 @@
           <a href="" target="_blank">
             <img src="images/sponsors/-100.png" height="100" border="0" alt="">
           </a>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
-          </a>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
-          </a>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
-          </a>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
-          </a>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
-          </a>
         </div>
 
-        <div class="sponsor-group">
+        <!-- div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Giant Sponsors</h3>
-          <!-- list -->
-        </div>
+        </div -->
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Big Sponsors</h3>
-          <!-- list -->
+          <a href="https://johnsandtaylor.com" target="_blank">
+            <img src="images/sponsors/johnsandtaylor-100.png" height="100" border="0" alt="">
+          </a>
+          <a href="https://www.revsys.com" target="_blank">
+            <img src="images/sponsors/revsys-100.png" height="100" border="0" alt="">
+          </a>
+        </div>
+
+        <div class="sponsor-group">
+          <h3 class="heading-secondary sponsor-group-title">Solo Sponsors</h3>
+          <a href="https://chariotsolutions.com" target="_blank">
+            Chariot Solutions
+          </a>
+          |
+          <a href="https://arcwebtech.com" target="_blank">
+            Arcweb
+          </a>
         </div>
       </section>
 
@@ -477,71 +477,13 @@
             most driven, creative and talented professionals.
           </p>
 
-          <div class="trifold">
-            <div class="trifold-fold trifold-fold--dashed">
-              <img
-                alt=""
-                class="trifold-icon"
-                src="images/sponsor-luchador-1.svg"
-              />
-              <h3 class="heading-secondary">Luchador</h3>
-              <p class="text-body text-body--small">
-                Start your day by getting your T-shirt and badge. Swing by the
-                breakfast table for some coffee and eats. Head to the board to
-                post your talk! Or just mingle with your fellow BarCampers and
-                watch the board fill up.
-                <br />
-                Heads up: Get to Huntsman Hall early. Slots fill quickly.
-              </p>
-            </div>
-            <div class="trifold-fold trifold-fold--dashed">
-              <img
-                alt=""
-                class="trifold-icon"
-                src="images/sponsor-giant-1.svg"
-              />
-              <h3 class="heading-secondary">Giant</h3>
-              <p class="text-body text-body--small">
-                Start your day by getting your T-shirt and badge. Swing by the
-                breakfast table for some coffee and eats. Head to the board to
-                post your talk! Or just mingle with your fellow BarCampers and
-                watch the board fill up.
-                <br />
-                Heads up: Get to Huntsman Hall early. Slots fill quickly.
-              </p>
-            </div>
-            <div class="trifold-fold trifold-fold--dashed">
-              <img
-                alt=""
-                class="trifold-icon"
-                src="images/sponsor-big.svg"
-              />
-              <h3 class="heading-secondary">Big</h3>
-              <p class="text-body text-body--small">
-                Start your day by getting your T-shirt and badge. Swing by the
-                breakfast table for some coffee and eats. Head to the board to
-                post your talk! Or just mingle with your fellow BarCampers and
-                watch the board fill up.
-                <br />
-                Heads up: Get to Huntsman Hall early. Slots fill quickly.
-              </p>
-            </div>
-          </div>
-
-          <h3 class="heading-secondary">
-            More! Add $500 to the Luchador level!
-          </h3>
-
-          <p class="text-body">
-            Set up a recruitment / networking table during the day. This perk is
-            first come, first serve and limited, so get your name in now!
-          </p>
-
           <div class="become-a-sponsor-buttons">
             <button class="button button--secondary">
               Full Sponsor Options
             </button>
-            <button class="button button--secondary">Contact Us</button>
+            <button class="button button--secondary">
+              Contact Us
+            </button>
           </div>
         </div>
       </section>
