--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@
           <h3 class="heading-secondary sponsor-group-title">
             Luchador Sponsors
           </h3>
-          <a href="" target="_blank">
-            <img src="images/sponsors/-100.png" height="100" border="0" alt="">
+          <a href="https://www.fastmail.com" target="_blank">
+            <img src="images/sponsors/fastmail-100.png" height="100" border="0" alt="Fastmail">
           </a>
         </div>
 
@@ -447,10 +447,10 @@
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Big Sponsors</h3>
           <a href="https://johnsandtaylor.com" target="_blank">
-            <img src="images/sponsors/johnsandtaylor-100.png" height="100" border="0" alt="">
+            <img src="images/sponsors/johnsandtaylor-100.png" height="100" border="0" alt="Johns & Taylor">
           </a>
           <a href="https://www.revsys.com" target="_blank">
-            <img src="images/sponsors/revsys-100.png" height="100" border="0" alt="">
+            <img src="images/sponsors/revsys-100.png" height="100" border="0" alt="REVSYS">
           </a>
         </div>
 
@@ -478,12 +478,16 @@
           </p>
 
           <div class="become-a-sponsor-buttons">
-            <button class="button button--secondary">
-              Full Sponsor Options
-            </button>
-            <button class="button button--secondary">
-              Contact Us
-            </button>
+            <a href="barcamp-philly-2023-prospectus.pdf">
+              <button class="button button--secondary">
+                Sponsorship Prospectus
+              </button>
+            </a>
+            <a href="mailto:barcampphilly@gmail.com">
+              <button class="button button--secondary">
+                Contact Us
+              </button>
+            </a>
           </div>
         </div>
       </section>
