Rework NetApp and REVSYS logos.

--- a/index.html
+++ b/index.html
@@ -383,17 +383,17 @@
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Venue Sponsor</h3>
           <a href="https://www.wharton.upenn.edu/" target="_blank">
-            <img src="images/sponsors/wharton-100.png" height="100" border="0" alt="The Wharton School">
+            <img src="images/sponsors/wharton-100.png" border="0" alt="The Wharton School">
           </a>
         </div>
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Ticket Sponsors</h3>
           <a href="https://www.netapp.com/" target="_blank">
-            <img src="images/sponsors/netapp-100.png" height="100" border="0" alt="NetApp">
+            <img src="images/sponsors/netapp-100.png" border="0" alt="NetApp">
           </a>
           <a href="https://www.cdillc.com/" target="_blank">
-            <img src="images/sponsors/cdi-100.png" height="100" border="0" alt="CDI">
+            <img src="images/sponsors/cdi-100.png" border="0" alt="CDI">
           </a>
         </div>
 
@@ -402,7 +402,7 @@
             Sugar Rush **AND** Lanyard Sponsor
           </h3>
           <a href="https://www.sealworks.com" target="_blank">
-            <img src="images/sponsors/sealworks-100.png" height="100" border="0" alt="SealWorks">
+            <img src="images/sponsors/sealworks-100.png" border="0" alt="SealWorks">
           </a>
         </div>
 
@@ -411,7 +411,7 @@
             Caffeine Sponsor!
           </h3>
           <a href="https://www.salesforce.com" target="_blank">
-            <img src="images/sponsors/salesforce-100.png" height="100" border="0" alt="Salesforce">
+            <img src="images/sponsors/salesforce-100.png" border="0" alt="Salesforce">
           </a>
         </div>
 
@@ -420,10 +420,10 @@
             Media &amp; Ticket Sponsor
           </h3>
           <a href="https://technical.ly" target="_blank">
-            <img src="images/sponsors/technically-100.png" height="100" border="0" alt="Technical.ly">
+            <img src="images/sponsors/technically-100.png" border="0" alt="Technical.ly">
           </a>
           <a href="https://www.ticketleap.com" target="_blank">
-            <img src="images/sponsors/ticketleap-100.png" height="100" border="0" alt="TicketLeap">
+            <img src="images/sponsors/ticketleap-100.png" border="0" alt="TicketLeap">
           </a>
         </div>
 
@@ -436,7 +436,7 @@
             Luchador Sponsors
           </h3>
           <a href="https://www.fastmail.com" target="_blank">
-            <img src="images/sponsors/fastmail-100.png" height="100" border="0" alt="Fastmail">
+            <img src="images/sponsors/fastmail-100.png" border="0" alt="Fastmail">
           </a>
         </div>
 
@@ -447,10 +447,10 @@
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">Big Sponsors</h3>
           <a href="https://johnsandtaylor.com" target="_blank">
-            <img src="images/sponsors/johnsandtaylor-100.png" height="100" border="0" alt="Johns & Taylor">
+            <img src="images/sponsors/johnsandtaylor-100.png" border="0" alt="Johns & Taylor">
           </a>
           <a href="https://www.revsys.com" target="_blank">
-            <img src="images/sponsors/revsys-100.png" height="100" border="0" alt="REVSYS">
+            <img src="images/sponsors/revsys-100.png" border="0" alt="REVSYS">
           </a>
         </div>
 
