Add link for buying tickets.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
       </nav>
       <section class="section section--hero" id="home">
         <div class="section-contents">
-          <button class="button button--primary section--hero--button-primary">
-            Register for BarCamp 14
-          </button>
+          <a href="https://barcamp-philly.ticketleap.com/barcamp-philly-14/dates/Nov-18-2023_at_0800AM" target="_blank">
+            <button class="button button--primary section--hero--button-primary">
+              Get My BarCamp 14 Tickets!
+            </button>
+          </a>
         </div>
       </section>
 
@@ -221,11 +223,11 @@
       </section>
 
       <section class="section section--register" id="register">
-        <button
-          class="button button--primary section--register--button-primary"
-        >
-          Register for BarCamp 14
-        </button>
+        <a href="https://barcamp-philly.ticketleap.com/barcamp-philly-14/dates/Nov-18-2023_at_0800AM" target="_blank">
+          <button class="button button--primary section--register--button-primary">
+            Get My BarCamp 14 Tickets!
+          </button>
+        </a>
       </section>
 
       <section
