A few more tiny tweaks.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           class="section-contents section-contents--thin section-contents--explainer"
         >
           <h1 class="heading-primary">BarCamp 14</h1>
-          <div class="heading-secondary">November 18th</div>
+          <div class="heading-secondary">Saturday, November 18th</div>
           <p class="text-body text-body--medium">
             We're back baby! Join us for the fourteenth year of BarCamp Philly
             for even more knowledge-sharing, community-building, and
