Separate Media & Ticket Sponsor.

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
-            Media &amp; Ticket Sponsor
+            Media Sponsor &amp; Ticket Sponsor
           </h3>
           <a href="https://technical.ly" target="_blank">
             <img src="images/sponsors/technically-100.png" class="responsive" alt="Technical.ly">
