One more tweak to headers.

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         </div>
 
         <div class="sponsor-group">
-          <h3 class="heading-secondary sponsor-group-title">Ticket Sponsors</h3>
+          <h3 class="heading-secondary sponsor-group-title">Lead Sponsors</h3>
           <a href="https://www.netapp.com/" target="_blank">
             <img src="images/sponsors/netapp-100.png" class="responsive" alt="NetApp">
           </a>
@@ -401,7 +401,7 @@
 
         <div class="sponsor-group">
           <h3 class="heading-secondary sponsor-group-title">
-            Sugar Rush **AND** Lanyard Sponsor
+            Sugar Rush & Lanyard Sponsor
           </h3>
           <a href="https://www.sealworks.com" target="_blank">
             <img src="images/sponsors/sealworks-100.png" class="responsive" alt="SealWorks">
