feat: share links

--- a/index.html
+++ b/index.html
@@ -82,7 +82,26 @@
             connection-making than ever before. Share your thoughts, questions,
             and experiences with your fellow BarCampers.
           </p>
-          <button class="button button--secondary">Share</button>
+          <div class="share-links">
+            <a
+              class="button button--secondary share-link"
+              href="https://linkedin.com/sharing/share-offsite/?url=http%3A%2F%2F2023.barcampphilly.org"
+              rel="noopener nofollow"
+              target="_blank"
+            >
+              <img alt="" class="share-link-icon" src="images/icons/linkedin.svg" />
+              Share on LinkedIn
+            </a>
+            <a
+              class="button button--secondary share-link"
+              href="https://twitter.com/intent/tweet?url=http%3A%2F%2F2023.barcampphilly.org&text=INSERT%20TEXT%20HERE%20YIPPEE&hashtags=apple%2Cbanana"
+              rel="noopener nofollow"
+              target="_blank"
+            >
+              <img alt="" class="share-link-icon" src="images/icons/twitter.svg" />
+              Share on Twitter
+            </a>
+          </div>
         </div>
       </section>
 
