chariot solutions logo added.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <body>
     <main class="section">
       <nav class="menu">
-       <a href="#home"><button class="menuItem active"></button></a>
+       <a href="#home"><button class="menuItem"></button></a>
        <a href="#about"><button class="menuItem"></button></a>
        <a href="#location"><button class="menuItem"></button></a>
        <a href="#schedule"><button class="menuItem"></button></a>
@@ -623,7 +623,7 @@
     <footer class="footer">
       <ul class="footer-links">
         <li>
-          <a href="" target="_blank" rel="noopener nofollow">
+          <a href="https://www.facebook.com/barcampphilly/" target="_blank" rel="noopener nofollow">
             <img
               alt="Facebook icon"
               src="images/social/facebook.svg"
@@ -632,7 +632,7 @@
         </li>
 
         <li>
-          <a href="" target="_blank" rel="noopener nofollow">
+          <a href="https://twitter.com/i/flow/login?redirect_after_login=%2Fbarcampphilly" target="_blank" rel="noopener nofollow">
             <img
               alt="Twitter icon"
               src="images/social/twitter.svg"
@@ -641,7 +641,7 @@
         </li>
 
         <li>
-          <a href="" target="_blank" rel="noopener nofollow">
+          <a href="https://www.instagram.com/barcampphilly/?hl=en" target="_blank" rel="noopener nofollow">
             <img
               alt="Instagram icon"
               src="images/social/instagram.svg"
@@ -650,7 +650,7 @@
         </li>
 
         <li>
-          <a href="" target="_blank" rel="noopener nofollow">
+          <a href="mailto:barcampphilly@gmail.com" target="_blank" rel="noopener nofollow">
             <img
               alt="Email icon"
               src="images/social/email.svg"
